--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -1,3 +1,3 @@
 data.db.url=jdbc:postgresql://localhost:5432/SocialNetwork
-data.db.username=
-data.db.password=
+data.db.username= postgres
+data.db.password= postgres
